fixed #letter word-wrap bug

--- a/public/stylesheets/workplace.css
+++ b/public/stylesheets/workplace.css
@@ -151,6 +151,7 @@
   animation: out 5s infinite linear;
   box-shadow: 2px 2px 5px rgba(0,0,0,0.5);
   padding: 10px;
+  word-wrap: break-word;
 }
 
 
